--- a/styles.css
+++ b/styles.css
@@ -419,6 +419,10 @@ footer {
 
 @media screen and (min-width: 768px) {
 
+  body {
+    max-width: 100%;
+  }
+
   .mobile-img {
     display: none !important;
   }
