--- a/styles.css
+++ b/styles.css
@@ -440,7 +440,7 @@ footer {
 
   .logo {
     margin: 3rem;
-    width: 12%;
+    width: 15%;
   }
 
   .arrow-down {
@@ -502,6 +502,7 @@ footer {
   }
 
   .nav-ul {
+    margin: 1rem;
     background-color: rgba(255, 255, 255, 0);
     outline: none;
     top: 0rem;
@@ -542,7 +543,8 @@ footer {
   }
 
   .overlay-text-1 {
-    width: 70%;
+    font-size: 1rem;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -561,7 +563,8 @@ footer {
   }
   
   .overlay-text-2 {
-    width: 70%;
+    font-size: 1rem;
+    width: 100%;
     padding: 0;
     display: flex;
     flex-direction: column;
